# study_and_work

./: .gitignore  .gitmodules  .kernelHello-1.ko.cmd  .kernelHello-1.mod.o.cmd  .kernelHello-1.o.cmd  .kernelHello-2.ko.cmd  .kernelHello-2.mod.o.cmd  .kernelHello-2.o.cmd  DirShow.c  Getopts.c  Makefile  Notify.c  README.md  kernelHello-1.c  kernelHello-1.ko  kernelHello-2.ko  modules.order  smallshell.c
.tmp_versions/: kernelHello-1.mod  kernelHello-2.mod
ai/programming-game-ai-by-example/ch2/west_world/: CMakeLists.txt  base_game_entity.cpp  base_game_entity.h  entity_names.h  locations.h  main.cpp  miner.cpp  miner.h  miner_states.cpp  miner_states.h  state.h
ai/programming-game-ai-by-example/ch2/west_world extended/: CMakeLists.txt  base_game_entity.h  buildit.sh  entity_manager.cpp  entity_manager.h  main.cpp  message_dispatcher.cpp  message_dispatcher.h  message_types.h  miner.cpp  miner.h  miner_states.cpp  miner_states.h  miners_wife.cpp  miners_wife.h  miners_wife_states.cpp  miners_wife_states.h  state.h  state_machine.h
ai/programming-game-ai-by-example/common/messaging/: telegram.h
ai/programming-game-ai-by-example/common/misc/: utils.h
ai/programming-game-ai-by-example/common/time/: crude_timer.cpp  crude_timer.h
arduino/sketch_2/: sketch_2.ino
arduino/sketch_3/: sketch_3.ino
arduino/sketch_4/: sketch_4.ino
cpp/: memoy_managment_cpp_resource_list.md  movedetector.cpp
cpp-project-template-cmake/: CMakeLists.txt  main.cpp
cpp/1FactoryMethod/: CMakeLists.txt
cpp/GangOfFour/: patterns_and_idioms.ini  паттерны.ini
cpp/GangOfFour/ObjectPool/: CMakeLists.txt  main.cpp
cpp/GangOfFour/decorator/: CMakeLists.txt  buildit.sh  decorator1.cpp  decorator2.1.cpp  decorator2.2.cpp  decorator2.3.cpp  decorator2.4.cpp  decorator2.5.cpp  decorator2.cpp  x86-linux-clang-14.cmake
cpp/GangOfFour/idioms/: CMakeLists.txt  has-member.cpp
cpp/GangOfFour/memento/: CMakeLists.txt  memento1.cpp  memento2.cpp  memento_command.cpp
cpp/GangOfFour/observer/: CMakeLists.txt  observer.cpp
cpp/akexandresku-modernCppDesign/scope_guard/: main-newstyle.cpp
cpp/akexandresku-modernCppDesign/scope_guard/scope-guard-newstyle/: main.cpp
cpp/akexandresku-modernCppDesign/scope_guard/scope-guard-newstyle-cppcon2015/: Janitor.h
cpp/akexandresku-modernCppDesign/typelist/: nmain.cpp
cpp/alexandresku-modernCppDesign/book-examples/: CMakeLists.txt
cpp/alexandresku-modernCppDesign/book-examples/ch1-policies/: CMakeLists.txt  policies.cpp  smartptr-policies.cpp
cpp/alexandresku-modernCppDesign/scope_guard/: CMakeLists.txt  main-newstyle-1.cpp  main-newstyle-2.cpp
cpp/alexandresku-modernCppDesign/scope_guard/scope-guard-newstyle-cppcon2015/: ScopeGuard.h
cpp/alexandresku-modernCppDesign/typelist/: CMakeLists.txt  listcontainer-ptr.hpp  listcontainer.hpp  main-newstyle.cpp  main.cpp  mapcontainer.hpp  test-attributes.cpp
cpp/c++user-grop/coroutine/: CMakeLists.txt
cpp/exc_test_realm/: CMakeLists.txt  main.cpp
cpp/memory-managment/: ex-safety.md  memoy_managment_cpp_resource_list.md
cpp/meta-programming/CH1-Policies/: policies-ex1.tar.xz
cpp/modernCppDesign/scope_guard/: Janitor.h  ScopeGuard.h  main-oldstyle.cpp
cpp/modernCppDesign/typelist/: typelist.cpp
cpp/stlbook/alloc/: CMakeLists.txt  main.cpp
cpp/stlbook/fo/: CMakeLists.txt  bind1.cpp  compose3.cpp  foreach3.cpp  meanvalue.cpp  sequence1.cpp  sequence2.cpp
cpp/stlbook/stl/: print.hpp
cpp/stroustrup/6/: CMakeLists.txt  ex18.cpp  ex20.cpp  test1
cpp/thread-programming/ch2/: CMakeLists.txt  l2.2.cpp  l2.3.cpp  l2.6.cpp
cpp/thread-programming/thread-test/: .clang-format  CMakeLists.txt  alg-test.tar  main.cpp
cpp/tmplbook/: sometraitsex.cpp
cpp/tmplbook/templatescpp/: accum6.cpp  accum6.hpp  accum7.cpp  elementtype.cpp  sumpolicy1.hpp  sumpolicy2.hpp
cpp/vandevurd-tmplbook/templatescpp/: CMakeLists.txt  accum7.hpp  accumtraits4.hpp  elementtype.hpp
cpp11threads/: Makefile  test1.cpp  test2.cpp
sandbox/cpp-project-template-cmake/: .gdb_history  CMakeLists.txt  main.cpp
sandbox/opengl/: CMakeLists.txt  buildit.sh  gl-extensions.cpp  gl-frag-shader.cpp  gl-motion.cpp  glad.c  hello-triangle-transform.cpp  hello-triangle.cpp  hello-window.cpp  setup.sh  triangle-renderer.cpp  triangle-renderer.h
sandbox/opengl/shaders/: hello-triangle-transform.frag  models.vert  simplest.frag  simplest.vert  sincolor.frag
sandbox/opengl/shared/: utils.cpp  utils.h
unixadvanced/: Makefile
unixadvanced/filedir/: Makefile  access.c  changemod.c  filetype  filetype.c  umask.c  unlink.c
unixadvanced/fileio/: Makefile  fileflags  fileflags.c  filehole  filehole.c  mycat  mycat.c  setflags  setflags.c
unixadvanced/include/: apue.h
unixadvanced/lib/: Makefile  error.c
unixadvanced/starting/: Makefile  dirshow2  dirshow2.c  shell1  shell1.c  shell2  shell2.c  stdinout  stdinout.c  stdinout2  stdinout2.c  testerror.c  ugid  ugid.c
unixadvanced/threads/: Makefile  badexit  badexit.c  barrier  exitstatus  exitstatus.c  handlethreadexit  handlethreadexit.c  threadid
unixkernel/: Makefile  Makefile_  ex_symbdriver.c  kernelHello-2.c  kernelHello-3.c  kernelHello-4.c  kernelHello-5.c  solution.c  start.c  stop.c
unixnetwork/: Makefile  day_time_cli.c  day_time_srv.c  epoll.c  ev_ex1.c  kqueue.c  libevtest.c  poll.c
unixnetwork/epoll_examples/: CMakeLists.txt  buildit.sh  main.cpp  test_epoll.cpp
unixtests/: DirShow.c  SimpleCopyFile.c  SimpleCopyFileV2.c  SimpleCopyFileV3.c  fork.c  idapp.c  shm_client.c  shm_server.c  time.c
unixtests/asm/: hello  hello.s
unixtests/src/: exec-1.c
(+19 files in other folders)
