cmake_minimum_required(VERSION 3.0.0)
project(decorator VERSION 0.1.0)

set(CMAKE_CXX_STANDARD 20)

add_executable(decorator1 decorator1.cpp)
add_executable(decorator2 decorator2.cpp)
add_executable(decorator2.1 decorator2.1.cpp)
add_executable(decorator2.2 decorator2.2.cpp)
add_executable(decorator2.3 decorator2.3.cpp)
add_executable(decorator2.4 decorator2.4.cpp)
add_executable(decorator2.5 decorator2.5.cpp)
